# topicwizard

./: .flake8  .gitignore  LICENSE  README.md  citation.cff  pyproject.toml
.github/workflows/: static.yml  tests.yml
docs/: api_reference.rst  application.rst  conf.py  figures.rst  getting_started.rst  index.rst  topic_data.rst  usage.compatibility.rst  usage.contextual_models.rst  usage.deployment.rst  usage.documents.rst  usage.groups.rst  usage.persistence.rst  usage.pipelines.rst  usage.topics.rst  usage.words.rst
docs/_build/doctrees/: api_reference.doctree  application.doctree  environment.pickle  getting_started.doctree  index.doctree  usage.compatibility.doctree  usage.deployment.doctree  usage.documents.doctree  usage.persistence.doctree  usage.topics.doctree  usage.words.doctree
docs/_build/html/: .buildinfo  api_reference.html  application.html  index.html  (+16 more)
examples/: basic_usage.ipynb
src/topicwizard/: __init__.py  app.py
tests/: test_compatibility.py  test_figures.py  test_integration.py
topicwizard/: __init__.py  _topicwizard.py  app.py  data.py  deployment.py  model_interface.py  pipeline.py
topicwizard/apps/: document.py  topic.py
topicwizard/blueprints/: app.py  documents.py  groups.py  template.py  topics.py  words.py
topicwizard/compatibility/: __init__.py  bertopic.py  gensim.py
topicwizard/components/: __init__.py  accordion.py  color_legend.py  document_inspector.py  relevance_slider.py  topic_switcher.py
topicwizard/figures/: __init__.py  documents.py  groups.py  topics.py  words.py
topicwizard/help/: documents.py  groups.py  topics.py  utils.py  words.py
topicwizard/plots/: document.py  documents.py  groups.py  topic.py  topics.py  utils.py  words.py
topicwizard/prepare/: data.py  dimensionality_reduction.py  documents.py  groups.py  topics.py  utils.py  words.py
topicwizard/utils/: app.py  plotting.py  prepare.py
topicwizard/widgets/: __init__.py  concept_compass.py  document_clusters.py  hierarchy.py  topic_browser.py  widget.py  widget_container.py  word_clusters.py
(+44 files in other folders)
